<resources>

    <!-- App metadata -->
    <string name="app_name">GreenStream</string>
    <string name="channel_name">Green Stream</string>
    <string name="channel_description">Tägliche Empfehlungen für nachhaltige Organisationen und Projekte</string>

    <!-- Preference keys -->
    <string name="daily_notification_pref_key">DAILY_NOTIFICATION_PREF_KEY</string>
    <string name="notification_time_pref_key">NOTIFICATION_TIME_PREF_KEY</string>
    <string name="topic_selection_pref_key">TOPIC_SELECTION_PREF_KEY</string>
    <string name="data_timestamp_pref_key">DATA_TIMESTAMP_PREF_KEY</string>
    <string name="user_data_timestamp_pref_key">USER_DATA_TIMESTAMP_PREF_KEY</string>
    <string name="show_in_app_pref_key">SHOW_IN_APP_PREF_KEY</string>
    <string name="language_selection_pref_key">LANGUAGE_SELECTION_PREF_KEY</string>
    <string name="last_type_pref_key">LAST_TYPE_PREF_KEY</string>
    <string name="last_topic_pref_key">LAST_TOPIC_PREF_KEY</string>
    <string name="user_email_pref_key">USER_EMAIL_PREF_KEY</string>
    <string name="user_password_pref_key">USER_PASSWORD_PREF_KEY</string>
    <string name="auto_login_account_pref_key">AUTO_LOGIN_ACCOUNT_PREF_KEY</string>

    <!-- Links -->
    <string name="server_url">https://deingreenstream.de</string>
    <string name="all_items_endpoint">/api/items</string>
    <string name="liked_items_endpoint">/api/items/liked</string>
    <string name="history_items_endpoint">/api/items/watched</string>
    <string name="watchlist_items_endpoint">/api/items/watchlist</string>
    <string name="update_liked_endpoint">/api/item/status/liked</string>
    <string name="update_history_endpoint">/api/item/status/watched</string>
    <string name="update_watchlist_endpoint">/api/item/status/watchlist</string>
    <string name="recommendation_endpoint">/api/item/recommended</string>
    <string name="item_endpoint">/api/item</string>
    <string name="app_data_endpoint">/api/full</string>
    <string name="labels_endpoint">/api/labels</string>
    <string name="feedback_endpoint">/api/feedback</string>
    <string name="login_endpoint">/login</string>
    <string name="register_endpoint">/account</string>
    <string name="item_update_endpoint">/api/item/status</string>
    <string name="user_data_endpoint">/api/fullUser</string>
    <string name="imprint_url">https://deingreenstream.de/impressum</string>
    <string name="about_us_url">https://deingreenstream.de/about</string>
    <string name="privacy_url">https://deingreenstream.de/privacy</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">Einstellungen</string>
    <string name="daily_notification_pref_summary">Stelle mir jeden Tag einen tollen Beitrag zum Thema Nachhaltigkeit vor</string>
    <string name="daily_notification_pref_title">Tägliche Benachrichtigungen</string>
    <string name="notification_time_pref_summary">Tägliche Benachrichtigungen werden um ca. %1$02d.%2$02d Uhr angezeigt</string>
    <string name="notification_time_pref_title">Zeit für Benachrichtigung</string>
    <string name="topic_selection_pref_summary">Mich interessieren diese Themen</string>
    <string name="topic_selection_pref_title">Persönliche Themenauswahl</string>
    <string name="show_in_app_pref_title">Öffne Webseiten in der App</string>
    <string name="show_in_app_pref_summary_off">Webseiten werden in der von dir bevorzugten App angezeigt</string>
    <string name="show_in_app_pref_summary_on">Webseiten werden in dieser App angezeigt (Ausnahme: Videos)</string>
    <string name="view">Anzeige</string>
    <string name="show">Ansehen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="explanation">Erklärung</string>
    <string name="others">Sonstiges</string>
    <string name="imprint">Impressum</string>
    <string name="about_us">Über uns</string>
    <string name="credentials">Account</string>

    <!-- Main activity -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="liked">Favoriten</string>
    <string name="watch_later">Später ansehen</string>
    <string name="history">Verlauf</string>
    <string name="remove_from_list">Aus der Liste entfernen</string>
    <string name="get_notification">Informiere mich</string>
    <string name="information_notification_dialog_title">Ansehen?</string>
    <string name="no">Nein</string>
    <string name="later">Später</string>
    <string name="yes">Ja</string>
    <string name="update">Aktualisierung</string>

    <!-- View activity -->
    <string name="share">Teilen</string>
    <string name="feedback">Feedback</string>
    <string name="cancel">Abbrechen</string>
    <string name="send">Senden</string>
    <string name="information_feedback_message">Bitte hier nur Feedback zu diesem Beitrag geben</string>
    <string name="feedback_received_success">Vielen Dank für das Feedback!</string>
    <string name="feedback_received_failed">Feedback konnte nicht gesendet werden!</string>
    <string name="open_external">Im Browser öffnen</string>

    <!-- Authenticator activity -->
    <string name="sign_in">Anmelden</string>
    <string name="accept_privacy_agreement">Ich akzeptiere die <a href="https://deingreenstream.de/privacy">Datenschutzbestimmungen</a></string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="login_failed">Anmeldung fehlgeschlagen!</string>
    <string name="login">Einloggen</string>
    <string name="log_out_question">Willst du dich wirklich ausloggen?</string>
    <string name="login_to_synchronize">Login to synchronize</string>
    <string name="log_out">Ausloggen</string>
    <string name="logged_out_warning">You are not logged in. Your preferences and viewing history will not be synchronized with the server!</string>
    <string name="logged_in_status">You are logged in as user \"%1$s\". Your preferences and viewing history will be synchronized with the server!</string>
    <string name="register">Registrieren</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="loading_data_failed">Inhalte konnten nicht geladen werden!</string>
    <string name="retry">Erneut versuchen</string>

    <!-- Account activity -->

    <string name="topics">Themen</string>
    <string name="save">Speichern</string>
    <string name="account_activity_title">Account</string>
    <string name="username">Nutzername</string>
    <string name="add_account">Neuer Acccount</string>
    <string name="privacy_agreement">Datenschutzbestimmungen</string>
    <string name="intro">Einführung</string>
    <string name="network_request_failed">Netzwerkanfrage fehlgeschlagen!</string>

</resources>
