<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/daily_notification_pref_key"
            android:summary="@string/daily_notification_pref_summary"
            android:title="@string/daily_notification_pref_title" />

        <com.example.greenstream.preferences.TimePreference
            android:defaultValue="12:00"
            android:dependency="@string/daily_notification_pref_key"
            android:key="@string/notification_time_pref_key"
            android:summary="@string/notification_time_pref_summary"
            android:title="@string/notification_time_pref_title" />


    </PreferenceCategory>
    <PreferenceCategory android:title="@string/view">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/show_in_app_pref_key"
            android:summaryOff="@string/show_in_app_pref_summary_off"
            android:summaryOn="@string/show_in_app_pref_summary_on"
            android:title="@string/show_in_app_pref_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/others">

        <Preference android:title="@string/imprint">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/imprint_url" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
