<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_login">
        <item
            android:id="@+id/login_nav_item"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/login" />
    </group>

    <group android:id="@+id/nav_group_view">
        <item
            android:id="@+id/watch_later_nav_item"
            android:icon="@drawable/ic_watch_later_24dp"
            android:title="@string/watch_later" />
        <item
            android:id="@+id/liked_nav_item"
            android:icon="@drawable/ic_liked_on_24dp"
            android:title="@string/liked" />
        <item
            android:id="@+id/history_nav_item"
            android:icon="@drawable/ic_history_24dp"
            android:title="@string/history" />
    </group>
    <group android:id="@+id/nav_group_others">
        <item
            android:id="@+id/settings_nav_item"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/title_activity_settings" />
    </group>
</menu>